--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/cli": "1.6.1",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
+    "node-sass": "^6.0.1",
     "typescript": "~2.4.2"
   }
 }
